src/test/ui/is.stderr
error[E0282]: type annotations needed
  --> $DIR/is.rs:13:23
   |
13 |     if my_opt is Some(x) && //~ ERROR type annotations needed
   |                       ^
   |                       |
   |                       cannot infer type for `_`
   |                       consider giving `x` a type

error: aborting due to previous error

